maven changes, adding parallel tng